--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
       Just one question: <strong>Was your food made correctly?</strong>
     </p>
 
-    <form id="foodForm">
+    <form id="foodForm"
+      action="https://docs.google.com/forms/d/e/1FAIpQLScYwyA7Trh5-olodyygcWY5HX8F2CuVBdmfsl3Af8W2DPhQUQ/formResponse"
+      method="POST"
+      target="hidden_iframe">
 
       <!-- Restaurant -->
       <label for="restaurant">Restaurant</label>
-      <select id="restaurant" name="restaurant" required>
+      <select id="restaurant" name="entry.1809047073" required>
         <option value="">Select a restaurant</option>
         <option>Arby's</option>
         <option>Burger King</option>
@@ -40,11 +43,11 @@
       <label>Was your food made correctly?</label>
       <div class="radio-group">
         <label>
-          <input type="radio" name="correct" value="Yes" required>
+          <input type="radio" name="entry.1083003025" value="Yes" required>
           Yes
         </label>
         <label>
-          <input type="radio" name="correct" value="No">
+          <input type="radio" name="entry.1083003025" value="No">
           No
         </label>
       </div>
@@ -52,7 +55,7 @@
       <!-- What went wrong -->
       <div id="issueSection" class="hidden">
         <label for="issue">What was wrong?</label>
-        <select id="issue" name="issue">
+        <select id="issue" name="entry.975635367">
           <option value="">Select an issue</option>
           <option>Missing item</option>
           <option>Incorrect preparation (not warmed, wrong toppings, etc.)</option>
@@ -61,12 +64,15 @@
         </select>
 
         <label for="details">Optional details</label>
-        <textarea id="details" name="details" placeholder="Example: Cookie ordered NOT warmed, but it was warmed anyway."></textarea>
+        <textarea id="details" name="entry.335747090" placeholder="Example: Cookie ordered NOT warmed, but it was warmed anyway."></textarea>
       </div>
 
       <button type="submit">Submit</button>
 
     </form>
+
+    <!-- Hidden iframe prevents redirect to Google -->
+    <iframe name="hidden_iframe" style="display:none;"></iframe>
 
     <p id="confirmation" class="hidden">
       Thank you! Your response has been recorded.
