Revise HTML for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -6,47 +6,49 @@
   <title>Food Made Right</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Better link previews (Facebook, etc.) -->
+  <!-- Social preview -->
   <meta property="og:title" content="Food Made Right" />
-  <meta property="og:description" content="Not Yelp. Not drama. Just: was it made correctly?" />
+  <meta property="og:description" content="Not Yelp. Not drama. Just: was the food made correctly?" />
   <meta property="og:type" content="website" />
 </head>
 
 <body>
   <div class="container">
 
-    <!-- Header / vibe -->
+    <!-- HERO -->
     <header class="hero">
-      <div class="badge">DATA > DRAMA</div>
+      <div class="badge">DATA &gt; DRAMA</div>
       <h1>Food Made Right</h1>
+
       <p class="subtitle">
-        This is <strong>not</strong> about waits, service, attitude, or vibes.<br>
-        It’s one thing only: <strong>Was the food made correctly?</strong>
+        This is <strong>not</strong> about wait times, service, or attitude.<br>
+        One thing only: <strong>Was the food made correctly?</strong>
       </p>
 
       <div class="rules">
         <div class="rule">✅ Missing item / wrong item / wrong prep</div>
-        <div class="rule">❌ No rants about staff, attitude, or “they were rude”</div>
+        <div class="rule">❌ No rants about staff or vibes</div>
       </div>
 
       <div class="microcopy">
-        Takes ~20 seconds. Your spite is efficient. 🙂
+        Takes ~20 seconds. Your spite is efficient.
       </div>
 
-      <!-- lightweight progress bar -->
       <div class="progress-wrap" aria-hidden="true">
         <div id="progressBar" class="progress-bar"></div>
       </div>
     </header>
 
-    <!-- Form card -->
+    <!-- FORM CARD -->
     <section class="card">
       <h2 class="card-title">Log a Food Accuracy Report</h2>
 
-      <form id="foodForm"
+      <form
+        id="foodForm"
         action="https://docs.google.com/forms/d/e/1FAIpQLScYwyA7Trh5-olodyygcWY5HX8F2CuVBdmfsl3Af8W2DPhQUQ/formResponse"
         method="POST"
-        target="hidden_iframe">
+        target="hidden_iframe"
+      >
 
         <!-- Restaurant search -->
         <label for="restaurantSearch">Search restaurant</label>
@@ -62,8 +64,6 @@
         <label for="restaurant">Restaurant</label>
         <select id="restaurant" name="entry.1809047073" required>
           <option value="">Select a restaurant</option>
-
-          <!-- Keep these options alphabetized; we’ll expand later -->
           <option>Arby's</option>
           <option>Burger King</option>
           <option>Chick-fil-A</option>
@@ -87,6 +87,7 @@
             <input type="radio" name="entry.1083003025" value="Yes" required>
             <span>Yes ✅</span>
           </label>
+
           <label class="radio-pill">
             <input type="radio" name="entry.1083003025" value="No">
             <span>No 😤</span>
@@ -117,11 +118,11 @@
         <button id="submitBtn" type="submit">Submit Report</button>
 
         <p class="fineprint">
-          Reports are anonymous. This is for accuracy tracking — not harassment.
+          Reports are anonymous. This is accuracy tracking — not harassment.
         </p>
       </form>
 
-      <!-- Hidden iframe prevents redirect to Google -->
+      <!-- Hidden iframe prevents redirect -->
       <iframe name="hidden_iframe" style="display:none;"></iframe>
 
       <p id="confirmation" class="hidden confirmation">
@@ -129,32 +130,54 @@
       </p>
     </section>
 
-    <!-- Fun “impact” area (local, optional) -->
+    <!-- LIVE STATS -->
     <section class="card stats">
-      <h2 class="card-title">Spite Stats (local)</h2>
+      <div class="stats-head">
+        <h2 class="card-title">Live Impact</h2>
+        <div id="statsUpdated" class="stats-updated">Loading…</div>
+      </div>
+
       <p class="stats-sub">
-        These counters are stored in your browser for now (not global yet).
-        When you want, we’ll pull real numbers from Sheets.
+        Real numbers from the public STATS tab. Raw responses stay private.
       </p>
 
       <div class="stat-grid">
         <div class="stat">
-          <div class="stat-num" id="statTotal">0</div>
-          <div class="stat-label">Reports submitted</div>
+          <div class="stat-num" id="stat_all_time_total">—</div>
+          <div class="stat-label">All-time reports</div>
         </div>
+
         <div class="stat">
-          <div class="stat-num" id="statNo">0</div>
-          <div class="stat-label">“No 😤” reports</div>
+          <div class="stat-num" id="stat_today_total">—</div>
+          <div class="stat-label">Today</div>
         </div>
+
         <div class="stat">
-          <div class="stat-num" id="statTop">—</div>
-          <div class="stat-label">Most selected restaurant (local)</div>
+          <div class="stat-num" id="stat_last7_total">—</div>
+          <div class="stat-label">Last 7 days</div>
         </div>
+
+        <div class="stat">
+          <div class="stat-num" id="stat_last7_not_right">—</div>
+          <div class="stat-label">Not made right (7d)</div>
+        </div>
+
+        <div class="stat">
+          <div class="stat-num" id="stat_last7_right">—</div>
+          <div class="stat-label">Made right (7d)</div>
+        </div>
+      </div>
+
+      <div id="statsError" class="hidden stats-error">
+        Stats temporarily unavailable. (Form still works.)
       </div>
     </section>
 
+    <!-- FOOTER -->
     <footer class="footer">
-      <div>Made for people who order food and expect the food they ordered.</div>
+      <div>
+        Made for people who order food and expect the food they ordered.
+      </div>
     </footer>
 
   </div>
